confidant-back-register4

--- a/doc/挚友汇.md
+++ b/doc/挚友汇.md
@@ -183,7 +183,7 @@ public class BaseResponse<T> implements Serializable {
 不需要自己 new 返回类，提供一些重载方法
 
 ```java
-package com.yupi.usercenter.common;
+package com.battlegao.usercenter.common;
 
 /**
  * 请求返回工具类
@@ -443,9 +443,9 @@ public long userRegister(String userAccount, String userPassword, String checkPa
 
    ```java
    // 存值
-   redisTemplate.opsForValue().set("yupiInt",1);
+   redisTemplate.opsForValue().set("battlegaoInt",1);
    // 取值
-   String yupiString = (String) redisTemplate.opsForValue().get("yupiString");
+   String battlegaoString = (String) redisTemplate.opsForValue().get("battlegaoString");
    ```
 
 3. 其他配置（使支持 RedisTemplate<String,Object>）
@@ -546,7 +546,7 @@ public long userRegister(String userAccount, String userPassword, String checkPa
            group-name: 用户中心 api
            api-rule: package
            api-rule-resources:
-             - com.yupi.usercenter.controller
+             - com.battlegao.usercenter.controller
    ```
 
 ## 7. json 序列化 （Gson）
