--- a/doc/挚友汇--寻知己 觅伙伴.md
+++ b/doc/挚友汇--寻知己 觅伙伴.md
@@ -82,38 +82,38 @@
 <a name="ZWu3y"></a>
 ## 功能分析及页面展示：
 <br /> **首页浏览：** 用户访问地址，首先跳到首页，需要注册登录后才能访问到站点上的其他用户。<br />
-![输入图片说明](doc/picture/01-%E9%A6%96%E9%A1%B5.png)<br />
+![输入图片说明](picture/01-%E9%A6%96%E9%A1%B5.png)<br />
 <br /> **用户登录：** 已有账号的输入密码进行登录，未有账号的用户需要注册账号。<br />
-![输入图片说明](doc/picture/02-%E7%99%BB%E5%BD%95%E9%A1%B5.png)
+![输入图片说明](picture/02-%E7%99%BB%E5%BD%95%E9%A1%B5.png)
 <br /> **用户注册：** 注册账号需按要求填写个人信息，进行信息核验后方可注册成功，信息有误，会进行错误提示给用户，让其修改。<br />
-![输入图片说明](doc/picture/03-%E6%B3%A8%E5%86%8C%E9%A1%B5.png)<br />
-![输入图片说明](doc/picture/04-%E6%96%B0%E7%94%A8%E6%88%B7%E6%B3%A8%E5%86%8C.png)
+![输入图片说明](picture/03-%E6%B3%A8%E5%86%8C%E9%A1%B5.png)<br />
+![输入图片说明](picture/04-%E6%96%B0%E7%94%A8%E6%88%B7%E6%B3%A8%E5%86%8C.png)
 <br /> **登录首页：** 用户输入账号密码后，登录后跳转到首页，页面刷新出其他用户信息。<br />
-![输入图片说明](doc/picture/05-%E7%99%BB%E5%BD%95%E9%A6%96%E9%A1%B5.png)
+![输入图片说明](picture/05-%E7%99%BB%E5%BD%95%E9%A6%96%E9%A1%B5.png)
 <br /> **个人信息页：** 展示当前用户登录昵称、修改个人信息、查看我创建的队伍和加入的队伍等功能。<br />
-![输入图片说明](doc/picture/06-%E9%98%9F%E4%BC%8D%E9%A1%B5.png)<br />
-![输入图片说明](doc/picture/07-%E4%B8%AA%E4%BA%BA%E4%BF%A1%E6%81%AF%E9%A1%B5.png)
+![输入图片说明](picture/06-%E9%98%9F%E4%BC%8D%E9%A1%B5.png)<br />
+![输入图片说明](picture/07-%E4%B8%AA%E4%BA%BA%E4%BF%A1%E6%81%AF%E9%A1%B5.png)
 <br /> **个人信息详情页：** 展示个人信息详细内容，修改个人信息和退出登录。<br />
-![输入图片说明](doc/picture/08-%E4%B8%AA%E4%BA%BA%E4%BF%A1%E6%81%AF%E8%AF%A6%E7%BB%86%E9%A1%B5.png)<br />
+![输入图片说明](picture/08-%E4%B8%AA%E4%BA%BA%E4%BF%A1%E6%81%AF%E8%AF%A6%E7%BB%86%E9%A1%B5.png)<br />
 <br /> **创建队伍页：** 用户根据个人兴趣爱好方向创建公开、私有、加密的队伍。<br />
-![输入图片说明](doc/picture/09-%E5%88%9B%E5%BB%BA%E9%98%9F%E4%BC%8D%E9%A1%B5.png)<br />
-![输入图片说明](doc/picture/10-%E5%88%9B%E5%BB%BA%E9%98%9F%E4%BC%8D1.png)
+![输入图片说明](picture/09-%E5%88%9B%E5%BB%BA%E9%98%9F%E4%BC%8D%E9%A1%B5.png)<br />
+![输入图片说明](picture/10-%E5%88%9B%E5%BB%BA%E9%98%9F%E4%BC%8D1.png)
 <br /> **个人队伍页：** 看自己创建过的队伍，更新队伍信息。<br />
-![输入图片说明](doc/picture/11-%E4%B8%AA%E4%BA%BA%E9%98%9F%E4%BC%8D%E9%A1%B5.png)
+![输入图片说明](picture/11-%E4%B8%AA%E4%BA%BA%E9%98%9F%E4%BC%8D%E9%A1%B5.png)
 <br />**加密队伍创建：** 建加密队伍需要设置加入密码，其他用户可以查看队伍信息，且加入队伍需要输入密码才行。<br />
-![输入图片说明](doc/picture/17-%E5%8A%A0%E5%AF%86%E9%98%9F%E4%BC%8D%E5%88%9B%E5%BB%BA.png)<br />
-![输入图片说明](doc/picture/18%E5%8A%A0%E5%AF%86%E9%98%9F%E4%BC%8D%E5%B1%95%E7%A4%BA.png)
+![输入图片说明](picture/17-%E5%8A%A0%E5%AF%86%E9%98%9F%E4%BC%8D%E5%88%9B%E5%BB%BA.png)<br />
+![输入图片说明](picture/18%E5%8A%A0%E5%AF%86%E9%98%9F%E4%BC%8D%E5%B1%95%E7%A4%BA.png)
 <br />**知己匹配功能：** 据标签进行优用户匹配，运用相似度计算算法 + 本地实时计算，帮助用户找到兴趣相投的知己伙伴。<br />
-![输入图片说明](doc/picture/12-%E7%9F%A5%E5%B7%B1%E5%8C%B9%E9%85%8D%E7%AE%97%E6%B3%95.png)
+![输入图片说明](picture/12-%E7%9F%A5%E5%B7%B1%E5%8C%B9%E9%85%8D%E7%AE%97%E6%B3%95.png)
 <br />**标签搜索页：** 许用户根据自定义标签标签去搜索其他用户，快速寻找知己伙伴。<br />
-![输入图片说明](doc/picture/13-%E7%9F%A5%E5%B7%B1%E9%A1%B5.png)<br />
-![输入图片说明](doc/picture/14-%E6%A0%B9%E6%8D%AE%E6%A0%87%E7%AD%BE%E5%AF%BB%E6%89%BE.png)<br />
-![输入图片说明](doc/picture/15-%E5%AF%BB%E6%89%BE%E7%BB%93%E6%9E%9C.png)<br />
+![输入图片说明](picture/13-%E7%9F%A5%E5%B7%B1%E9%A1%B5.png)<br />
+![输入图片说明](picture/14-%E6%A0%B9%E6%8D%AE%E6%A0%87%E7%AD%BE%E5%AF%BB%E6%89%BE.png)<br />
+![输入图片说明](picture/15-%E5%AF%BB%E6%89%BE%E7%BB%93%E6%9E%9C.png)<br />
 <br />**队伍搜索页：** 用户更加关键词对理想队伍实现快速搜索功能。<br />
-![输入图片说明](doc/picture/16-%E6%A0%B9%E6%8D%AE%E5%85%B3%E9%94%AE%E8%AF%8D%E5%AF%BB%E6%89%BE%E9%98%9F%E4%BC%8D.png)<br />
+![输入图片说明](picture/16-%E6%A0%B9%E6%8D%AE%E5%85%B3%E9%94%AE%E8%AF%8D%E5%AF%BB%E6%89%BE%E9%98%9F%E4%BC%8D.png)<br />
 <a name="qkqKP"></a>
 ### 挚友汇系统架构图（部分）：
-![输入图片说明](doc/picture/20-%E6%9E%B6%E6%9E%84%E5%9B%BE.png)
+![输入图片说明](picture/20-%E6%9E%B6%E6%9E%84%E5%9B%BE.png)
 
 <br />个人博客：[https://www.cnblogs.com/zbcxy506/](https://www.cnblogs.com/zbcxy506/)<br />gitee地址：[https://gitee.com/g-abo/confidants-back-master](https://gitee.com/g-abo/confidants-back-master)
 
